--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,13 @@
 # Site settings
-title: "gjuniioor"
+title: "fokt"
 bye_message: "Thx!"
-baseurl: "/clyell/"
-url: "https://gjuniioor.github.io"
-disqus: gjuniioor
-
-# Header settings
-nick: "gjuniioor"
-mail:
-    domain: "protonmail"
-    ext: "ch"
-source_code:
-    server: "github.com"
-    nick: "gjuniioor"
-blog:
-    server: "wordpress.com"
-    nick: "gjuniioor"
-fingerprint_key: "5E12 9ABC C2A9 564B C048  2DF9 D327 0D10 BC71 CF75"
+baseurl: "/"
+url: "https://fachrioktavian.github.io"
+#disqus: fokt
+disqus:
+    # Leave shortname blank to disable comments site-wide.
+    # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+    shortname: fokt
 
 # Build settings
 markdown: kramdown
