--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "fokt"
+title: "fokt's blog"
 bye_message: "Thx!"
 baseurl: "/blog"
 url: "https://fachrioktavian.github.io/"
